Add unified detection override interfaces, numeric coercion config DTOs, and refactor schema detection strategies for flexible import handling